--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_0AUTH_DOMAIN=dev-5lhlt-k7.us.auth0.com
 REACT_APP_0AUTH_CLIENT_ID=09xlvTjsrqTXwd6PfaSwRKj0jyT7gJi2
+REACT_APP_API_BASE_URL=http://localhost:5000/
